--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
       --text: #333;
     }
 
-    /* 全体リセット */
     body { margin: 0; font-family: sans-serif; background: var(--bg); color: var(--text); line-height: 1.6; }
     .container { max-width: 900px; margin: 0 auto; padding: 0 15px; }
 
-    /* セクション間の余白を最小化 */
-    section { padding: 30px 0; }
+    /* 全セクションの余白を統一 */
+    section { padding: 45px 0; }
     .bg-white { background-color: var(--white); }
 
     header { background: var(--white); padding: 10px 0; border-bottom: 1px solid #eee; }
@@ -28,15 +27,15 @@
     .hero {
       position: relative;
       background: url("images/hero.jpg") no-repeat center 40% / cover;
-      height: 250px; /* 縦幅を短くカット */
+      height: 250px;
       display: flex;
       align-items: center;
       justify-content: center;
     }
     .hero-card {
-      background: rgba(255, 255, 255, 0.65); /* 透明度をさらにアップ */
+      background: rgba(255, 255, 255, 0.65);
       padding: 20px;
-      width: 80%;
+      width: 85%;
       text-align: center;
       border-radius: 12px;
       backdrop-filter: blur(3px);
@@ -46,77 +45,99 @@
 
     /* --- テキストエリア --- */
     .intro { text-align: center; }
-    .intro .quote { font-weight: bold; font-size: 1.15rem; color: var(--main); display: block; margin-bottom: 10px; }
-    .intro p { margin: 0; font-size: 0.95rem; line-height: 1.5; }
-    .partners { font-size: 0.8rem; margin-top: 15px; color: #666; }
-    .partners a { color: var(--main); margin: 0 5px; text-decoration: underline; }
+    .intro .quote { font-weight: bold; font-size: 1.15rem; color: var(--main); display: block; margin-bottom: 15px; }
+    .intro p { margin: 0; font-size: 0.95rem; }
+    .partners { font-size: 0.8rem; margin-top: 20px; color: #666; }
+    .partners a { color: var(--main); margin: 0 5px; text-decoration: underline; white-space: nowrap; }
+
+    /* PCのみ改行を消す設定 */
+    .sp-br { display: block; }
 
     /* --- グリッド（カード） --- */
     .feature-grid {
       display: grid;
-      gap: 10px; /* スマホでのカード間隔をタイトに */
+      gap: 15px; /* カード間の隙間 */
       grid-template-columns: repeat(2, 1fr);
     }
     .card {
       background: var(--white);
-      padding: 15px 10px;
-      border-radius: 8px;
+      padding: 20px 10px;
+      border-radius: 10px;
       text-align: center;
       box-shadow: 0 2px 5px rgba(0,0,0,0.05);
-      border: 1px solid #f0f0f0;
+      box-sizing: border-box;
     }
-    .card img { width: 45px; height: 45px; margin-bottom: 8px; object-fit: contain; }
-    .card h4 { margin: 0 0 5px; color: var(--main); font-size: 0.9rem; }
-    .card p { margin: 0; font-size: 0.75rem; line-height: 1.3; }
+    .card img { width: 50px; height: 50px; margin-bottom: 10px; object-fit: contain; }
+    .card h4 { margin: 0 0 5px; color: var(--main); font-size: 0.95rem; }
+    .card p { margin: 0; font-size: 0.8rem; line-height: 1.4; }
 
     .card-full { grid-column: span 2; }
 
-    /* --- 図解（間延び解消） --- */
-    .diagram-sec { text-align: center; padding: 20px 0; }
-    .diagram-sec h2 { font-size: 1rem; margin: 0 0 10px; }
+    /* --- 図解 --- */
+    .diagram-sec { text-align: center; }
+    .diagram-sec h2 { font-size: 1.1rem; margin: 0 0 20px; color: var(--main); }
     .diagram-img {
       width: 100%;
-      max-width: 400px; /* サイズを絞って間延び防止 */
+      max-width: 450px;
       height: auto;
       display: block;
       margin: 0 auto;
+      border-radius: 8px;
+    }
+
+    /* --- お問い合わせ（独立したセクションとして余白を確保） --- */
+    .contact-sec { text-align: center; }
+    .contact-card {
+      background: var(--white);
+      max-width: 550px;
+      margin: 0 auto;
+      padding: 30px 20px;
+      border-radius: 12px;
+      border: 1px solid #eee;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.03);
     }
 
     /* --- ボタン --- */
     .btn-main {
       display: inline-block;
-      padding: 10px 30px;
+      padding: 12px 40px;
       background: var(--accent);
       color: #fff;
       text-decoration: none;
-      border-radius: 25px;
+      border-radius: 30px;
       font-weight: bold;
-      margin-top: 10px;
-      font-size: 0.9rem;
+      margin-top: 15px;
+      font-size: 1rem;
     }
     .btn-sub {
       display: inline-block;
-      padding: 6px 12px;
-      border: 1px solid var(--main);
+      padding: 8px 15px;
+      border: 1.5px solid var(--main);
       color: var(--main);
       text-decoration: none;
-      border-radius: 4px;
-      font-size: 0.75rem;
-      margin-top: 8px;
+      border-radius: 6px;
+      font-size: 0.85rem;
+      margin-top: 10px;
+      font-weight: bold;
     }
 
-    footer { padding: 20px 0; text-align: center; font-size: 0.7rem; background: #eee; }
+    footer { padding: 30px 0; text-align: center; font-size: 0.8rem; background: #f0f0f0; color: #777; }
 
     /* --- PC出し分け --- */
     @media (min-width: 768px) {
+      section { padding: 60px 0; }
       .hero { height: 400px; }
-      .hero-card { width: 450px; padding: 40px; text-align: left; margin-left: -150px; }
-      .hero h1 { font-size: 2.5rem; }
-      .hero p { font-size: 1.2rem; }
+      .hero-card { width: 500px; padding: 40px; text-align: left; margin-left: -150px; }
+      .hero h1 { font-size: 2.8rem; }
+      .hero p { font-size: 1.3rem; }
+      
+      .intro .quote { font-size: 1.8rem; }
+      .sp-br { display: none; } /* PCでは改行を非表示 */
+
       .feature-grid { grid-template-columns: repeat(3, 1fr); gap: 20px; }
       .card-full { grid-column: span 1; }
-      .card img { width: 60px; height: 60px; }
-      section { padding: 50px 0; }
+      .card img { width: 70px; height: 70px; }
+      .card h4 { font-size: 1.1rem; }
     }
   </style>
 </head>
@@ -134,7 +155,7 @@
 </div>
 
 <section class="intro container">
-  <span class="quote">「障害を持ったお子さんにも<br>自分で動かす楽しさを」</span>
+  <span class="quote">「障害を持ったお子さんにも<br class="sp-br">自分で動かす楽しさを」</span>
   <p>電池式おもちゃの改造や専用スイッチの作成を通じて、子どもたちの「自分でできた！」という喜びを応援しています。</p>
   <div class="partners">
     【 提携病院 】<br>
@@ -170,38 +191,41 @@
   <img src="images/illustration-jack.png" alt="改造図" class="diagram-img">
 </section>
 
-<section class="container" style="text-align: center;">
-  <div class="card card-full" style="max-width: 500px; margin: 0 auto; padding: 25px;">
-    <h4 style="margin: 0 0 10px; color: var(--main);">お問い合わせ</h4>
-    <p style="font-size: 0.85rem;">改造の依頼やご相談はこちら</p>
+<section class="contact-sec container">
+  <div class="contact-card">
+    <h4 style="margin: 0 0 10px; color: var(--main); font-size: 1.2rem;">お問い合わせ</h4>
+    <p style="font-size: 0.9rem;">改造の依頼やご相談など、お気軽にメールください。</p>
     <a href="mailto:seigou.fthp@gmail.com" class="btn-main">メールを送る</a>
-    <p style="font-size: 0.8rem; margin-top: 10px; font-weight: bold;">📩 seigou.fthp@gmail.com</p>
+    <p style="font-size: 0.9rem; margin-top: 15px; font-weight: bold; color: var(--main);">📩 seigou.fthp@gmail.com</p>
   </div>
 </section>
 
 <section class="container">
   <div class="feature-grid">
     <div class="card">
-      <div style="font-size: 1.5rem;">📦</div>
+      <div style="font-size: 2.2rem; margin-bottom: 5px;">📦</div>
       <h4>おもちゃ貸出</h4>
-      <a href="https://sites.google.com/view/fthp/toy-list" class="btn-sub">リスト</a>
+      <a href="https://sites.google.com/view/fthp/toy-list" class="btn-sub">貸出リスト</a>
     </div>
     <div class="card">
-      <div style="font-size: 1.5rem;">🛠️</div>
+      <div style="font-size: 2.2rem; margin-bottom: 5px;">🛠️</div>
       <h4>スイッチ紹介</h4>
       <a href="https://sites.google.com/view/fthp/switch-sample" class="btn-sub">サンプル</a>
     </div>
     <div class="card card-full">
-      <div style="font-size: 1.5rem;">📰</div>
+      <div style="font-size: 2.2rem; margin-bottom: 5px;">📰</div>
       <h4>メディア紹介</h4>
-      <p style="font-size: 0.8rem;">チイコミ掲載記事です</p>
+      <p style="font-size: 0.85rem; color: #666;">地域情報サイト「チイコミ」掲載記事</p>
       <a href="https://chiicomi.com/press/2057941/" target="_blank" class="btn-sub">記事を読む</a>
     </div>
   </div>
 </section>
 
 <footer>
-  <p>© 2024 船橋おもちゃの病院</p>
+  <div class="container">
+    <p>© 2024 船橋おもちゃの病院</p>
+    <a href="https://sites.google.com/view/fthp/home" style="color: #999; text-decoration: underline;">Googleサイト版を表示</a>
+  </div>
 </footer>
 
 </body>
