--- a/index.html
+++ b/index.html
@@ -11,19 +11,21 @@
       --bg: #faf7f2;
       --white: #ffffff;
       --text: #333;
+      /* 余白を一括管理 */
+      --space-m: 40px; 
+      --space-l: 60px;
     }
 
     body { margin: 0; font-family: sans-serif; background: var(--bg); color: var(--text); line-height: 1.6; }
-    .container { max-width: 900px; margin: 0 auto; padding: 0 15px; }
+    .container { max-width: 900px; margin: 0 auto; padding: 0 20px; box-sizing: border-box; }
 
-    /* 全セクションの余白を統一 */
-    section { padding: 45px 0; }
-    .bg-white { background-color: var(--white); }
+    /* 全要素の基本下マージンを統一 */
+    .m-bottom { margin-bottom: var(--space-m); }
 
-    header { background: var(--white); padding: 10px 0; border-bottom: 1px solid #eee; }
+    /* --- ヘッダー・ヒーロー --- */
+    header { background: var(--white); padding: 12px 0; border-bottom: 1px solid #eee; margin-bottom: 0; }
     .logo { font-weight: bold; color: var(--main); font-size: 1.1rem; }
 
-    /* --- ヒーロー --- */
     .hero {
       position: relative;
       background: url("images/hero.jpg") no-repeat center 40% / cover;
@@ -31,6 +33,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      margin-bottom: var(--space-m); /* ここも一律 */
     }
     .hero-card {
       background: rgba(255, 255, 255, 0.65);
@@ -40,112 +43,73 @@
       border-radius: 12px;
       backdrop-filter: blur(3px);
     }
-    .hero h1 { margin: 0; font-size: 1.4rem; color: var(--main); }
-    .hero p { margin: 5px 0 0; font-weight: bold; color: var(--accent); font-size: 0.9rem; }
 
     /* --- テキストエリア --- */
     .intro { text-align: center; }
-    .intro .quote { font-weight: bold; font-size: 1.15rem; color: var(--main); display: block; margin-bottom: 15px; }
-    .intro p { margin: 0; font-size: 0.95rem; }
-    .partners { font-size: 0.8rem; margin-top: 20px; color: #666; }
-    .partners a { color: var(--main); margin: 0 5px; text-decoration: underline; white-space: nowrap; }
-
-    /* PCのみ改行を消す設定 */
+    .intro .quote { font-weight: bold; font-size: 1.2rem; color: var(--main); display: block; margin-bottom: 15px; }
     .sp-br { display: block; }
 
-    /* --- グリッド（カード） --- */
+    .partners { font-size: 0.85rem; color: #666; margin-top: 20px; }
+    .partners a { color: var(--main); margin: 0 5px; text-decoration: underline; white-space: nowrap; }
+
+    /* --- カードレイアウト --- */
     .feature-grid {
       display: grid;
-      gap: 15px; /* カード間の隙間 */
+      gap: 15px; /* カード同士の隙間を一律に */
       grid-template-columns: repeat(2, 1fr);
     }
     .card {
       background: var(--white);
-      padding: 20px 10px;
+      padding: 20px 15px;
       border-radius: 10px;
       text-align: center;
       box-shadow: 0 2px 5px rgba(0,0,0,0.05);
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
       box-sizing: border-box;
     }
-    .card img { width: 50px; height: 50px; margin-bottom: 10px; object-fit: contain; }
-    .card h4 { margin: 0 0 5px; color: var(--main); font-size: 0.95rem; }
+    .card img, .card .icon { font-size: 2.2rem; margin-bottom: 10px; width: 50px; height: 50px; object-fit: contain; margin-left: auto; margin-right: auto; }
+    .card h4 { margin: 0 0 8px; color: var(--main); font-size: 0.95rem; }
     .card p { margin: 0; font-size: 0.8rem; line-height: 1.4; }
-
     .card-full { grid-column: span 2; }
 
     /* --- 図解 --- */
-    .diagram-sec { text-align: center; }
-    .diagram-sec h2 { font-size: 1.1rem; margin: 0 0 20px; color: var(--main); }
-    .diagram-img {
-      width: 100%;
-      max-width: 450px;
-      height: auto;
-      display: block;
-      margin: 0 auto;
-      border-radius: 8px;
-    }
+    .diagram-area { text-align: center; }
+    .diagram-area h2 { font-size: 1.1rem; margin: 0 0 15px; color: var(--main); }
+    .diagram-img { width: 100%; max-width: 450px; border-radius: 8px; }
 
-    /* --- お問い合わせ（独立したセクションとして余白を確保） --- */
-    .contact-sec { text-align: center; }
+    /* --- お問い合わせ（独立したカード） --- */
     .contact-card {
       background: var(--white);
-      max-width: 550px;
-      margin: 0 auto;
       padding: 30px 20px;
       border-radius: 12px;
       border: 1px solid #eee;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.03);
+      text-align: center;
     }
 
     /* --- ボタン --- */
-    .btn-main {
-      display: inline-block;
-      padding: 12px 40px;
-      background: var(--accent);
-      color: #fff;
-      text-decoration: none;
-      border-radius: 30px;
-      font-weight: bold;
-      margin-top: 15px;
-      font-size: 1rem;
-    }
-    .btn-sub {
-      display: inline-block;
-      padding: 8px 15px;
-      border: 1.5px solid var(--main);
-      color: var(--main);
-      text-decoration: none;
-      border-radius: 6px;
-      font-size: 0.85rem;
-      margin-top: 10px;
-      font-weight: bold;
-    }
+    .btn-main { display: inline-block; padding: 12px 40px; background: var(--accent); color: #fff; text-decoration: none; border-radius: 30px; font-weight: bold; margin-top: 15px; }
+    .btn-sub { display: inline-block; padding: 8px 15px; border: 1.5px solid var(--main); color: var(--main); text-decoration: none; border-radius: 6px; font-size: 0.8rem; margin-top: 10px; font-weight: bold; }
 
-    footer { padding: 30px 0; text-align: center; font-size: 0.8rem; background: #f0f0f0; color: #777; }
+    footer { padding: 40px 0; text-align: center; font-size: 0.8rem; background: #eee; }
 
-    /* --- PC出し分け --- */
+    /* --- PC用 --- */
     @media (min-width: 768px) {
-      section { padding: 60px 0; }
-      .hero { height: 400px; }
-      .hero-card { width: 500px; padding: 40px; text-align: left; margin-left: -150px; }
+      :root { --space-m: 60px; }
+      .hero { height: 400px; justify-content: flex-start; }
+      .hero-card { width: 480px; text-align: left; margin-left: 10%; padding: 40px; }
       .hero h1 { font-size: 2.8rem; }
-      .hero p { font-size: 1.3rem; }
-      
-      .intro .quote { font-size: 1.8rem; }
-      .sp-br { display: none; } /* PCでは改行を非表示 */
-
+      .sp-br { display: none; }
       .feature-grid { grid-template-columns: repeat(3, 1fr); gap: 20px; }
       .card-full { grid-column: span 1; }
       .card img { width: 70px; height: 70px; }
-      .card h4 { font-size: 1.1rem; }
     }
   </style>
 </head>
 <body>
 
-<header>
-  <div class="container logo">fthp</div>
-</header>
+<header><div class="container logo">fthp</div></header>
 
 <div class="hero">
   <div class="hero-card">
@@ -154,72 +118,72 @@
   </div>
 </div>
 
-<section class="intro container">
-  <span class="quote">「障害を持ったお子さんにも<br class="sp-br">自分で動かす楽しさを」</span>
-  <p>電池式おもちゃの改造や専用スイッチの作成を通じて、子どもたちの「自分でできた！」という喜びを応援しています。</p>
-  <div class="partners">
-    【 提携病院 】<br>
-    <a href="https://kamagaya-toy-h.jimdofree.com/" target="_blank">鎌ケ谷おもちゃ病院</a>
-    <a href="https://gyotoku-toy.jimdofree.com/" target="_blank">行徳おもちゃ病院</a>
-  </div>
-</section>
-
-<section class="bg-white">
-  <div class="container">
-    <div class="feature-grid">
-      <div class="card">
-        <img src="images/icon-toy.png" alt="">
-        <h4>おもちゃの改造</h4>
-        <p>市販品を動かしやすく作り変えます。</p>
-      </div>
-      <div class="card">
-        <img src="images/icon-jack.png" alt="">
-        <h4>ジャック増設</h4>
-        <p>外部スイッチを接続可能にします。</p>
-      </div>
-      <div class="card card-full">
-        <img src="images/icon-switch.png" alt="">
-        <h4>スイッチ作成</h4>
-        <p>特性に合わせたスイッチを手作りします。</p>
-      </div>
+<div class="container m-bottom">
+  <div class="intro">
+    <span class="quote">「障害を持ったお子さんにも<br class="sp-br">自分で動かす楽しさを」</span>
+    <p>電池式おもちゃの改造や専用スイッチの作成を通じて、子どもたちの「自分でできた！」という喜びを応援しています。</p>
+    <div class="partners">
+      <span>【 提携病院 】</span><br>
+      <a href="https://kamagaya-toy-h.jimdofree.com/" target="_blank">鎌ケ谷おもちゃ病院</a>
+      <a href="https://gyotoku-toy.jimdofree.com/" target="_blank">行徳おもちゃ病院</a>
     </div>
   </div>
-</section>
+</div>
 
-<section class="diagram-sec container">
+<div class="container m-bottom">
+  <div class="feature-grid">
+    <div class="card">
+      <img src="images/icon-toy.png" alt="">
+      <h4>おもちゃの改造</h4>
+      <p>市販品を動かしやすく作り変えます。</p>
+    </div>
+    <div class="card">
+      <img src="images/icon-jack.png" alt="">
+      <h4>ジャック増設</h4>
+      <p>外部スイッチを接続可能にします。</p>
+    </div>
+    <div class="card card-full">
+      <img src="images/icon-switch.png" alt="">
+      <h4>スイッチ作成</h4>
+      <p>特性に合わせたスイッチを手作りします。</p>
+    </div>
+  </div>
+</div>
+
+<div class="container m-bottom diagram-area">
   <h2>取り付けのイメージ</h2>
   <img src="images/illustration-jack.png" alt="改造図" class="diagram-img">
-</section>
+</div>
 
-<section class="contact-sec container">
+<div class="container m-bottom">
   <div class="contact-card">
     <h4 style="margin: 0 0 10px; color: var(--main); font-size: 1.2rem;">お問い合わせ</h4>
     <p style="font-size: 0.9rem;">改造の依頼やご相談など、お気軽にメールください。</p>
     <a href="mailto:seigou.fthp@gmail.com" class="btn-main">メールを送る</a>
     <p style="font-size: 0.9rem; margin-top: 15px; font-weight: bold; color: var(--main);">📩 seigou.fthp@gmail.com</p>
   </div>
-</section>
+</div>
 
-<section class="container">
+<div class="container m-bottom">
   <div class="feature-grid">
     <div class="card">
-      <div style="font-size: 2.2rem; margin-bottom: 5px;">📦</div>
+      <div class="icon">📦</div>
       <h4>おもちゃ貸出</h4>
       <a href="https://sites.google.com/view/fthp/toy-list" class="btn-sub">貸出リスト</a>
     </div>
     <div class="card">
-      <div style="font-size: 2.2rem; margin-bottom: 5px;">🛠️</div>
+      <div class="icon">🛠️</div>
       <h4>スイッチ紹介</h4>
       <a href="https://sites.google.com/view/fthp/switch-sample" class="btn-sub">サンプル</a>
     </div>
     <div class="card card-full">
-      <div style="font-size: 2.2rem; margin-bottom: 5px;">📰</div>
+      <div class="icon">📰</div>
       <h4>メディア紹介</h4>
-      <p style="font-size: 0.85rem; color: #666;">地域情報サイト「チイコミ」掲載記事</p>
+      <p style="font-size: 0.8rem; margin-bottom: 5px;">地域情報サイト「チイコミ」掲載記事</p>
       <a href="https://chiicomi.com/press/2057941/" target="_blank" class="btn-sub">記事を読む</a>
     </div>
   </div>
-</section>
+</div>
 
 <footer>
   <div class="container">
